Created a layout for SPLMeterActivity.Added a rectangular drawable

--- a/app/src/main/res/layout/activity_splmeter.xml
+++ b/app/src/main/res/layout/activity_splmeter.xml
@@ -15,4 +15,229 @@
         android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/SPLMeterLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="56dp">
+
+        <ImageView
+            android:id="@+id/drawable_linst_field"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/drawable_linst_field_description"
+            app:layout_constraintBottom_toTopOf="@+id/drawable_lmin_field"
+            app:layout_constraintEnd_toStartOf="@+id/drawable_leq_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/rectangle_border" />
+
+        <TextView
+            android:id="@+id/textView_linst_field_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="0.0"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="34sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/drawable_linst_field"
+            app:layout_constraintEnd_toEndOf="@+id/drawable_linst_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/drawable_linst_field"
+            app:layout_constraintTop_toBottomOf="@+id/textView_linst_field" />
+
+        <TextView
+            android:id="@+id/textView_linst_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/drawable_linst_field_description"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView_linst_field_value"
+            app:layout_constraintEnd_toEndOf="@+id/drawable_linst_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/drawable_linst_field"
+            app:layout_constraintTop_toTopOf="@+id/drawable_linst_field" />
+
+        <ImageView
+            android:id="@+id/drawable_leq_field"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/drawable_leq_field_description"
+            app:layout_constraintBottom_toTopOf="@+id/drawable_lmax_field"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/drawable_linst_field"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/rectangle_border" />
+
+        <TextView
+            android:id="@+id/textView_leq_field_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="0.0"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="34sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/drawable_leq_field"
+            app:layout_constraintEnd_toEndOf="@+id/drawable_leq_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/drawable_leq_field"
+            app:layout_constraintTop_toBottomOf="@+id/textView_leq_field" />
+
+        <TextView
+            android:id="@+id/textView_leq_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/drawable_leq_field_description"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView_leq_field_value"
+            app:layout_constraintEnd_toEndOf="@+id/drawable_leq_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/drawable_leq_field"
+            app:layout_constraintTop_toTopOf="@+id/drawable_leq_field" />
+
+        <ImageView
+            android:id="@+id/drawable_lmin_field"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="32dp"
+            android:contentDescription="@string/drawable_lmin_field_description"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/drawable_lmax_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/drawable_linst_field"
+            app:srcCompat="@drawable/rectangle_border" />
+
+        <TextView
+            android:id="@+id/textView_lmin_field_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="0.0"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="34sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/drawable_lmin_field"
+            app:layout_constraintEnd_toEndOf="@+id/drawable_lmin_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/drawable_lmin_field"
+            app:layout_constraintTop_toBottomOf="@+id/textView_lmin_field" />
+
+        <TextView
+            android:id="@+id/textView_lmin_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/drawable_lmin_field_description"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView_lmin_field_value"
+            app:layout_constraintEnd_toEndOf="@+id/drawable_lmin_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/drawable_lmin_field"
+            app:layout_constraintTop_toTopOf="@+id/drawable_lmin_field" />
+
+        <ImageView
+            android:id="@+id/drawable_lmax_field"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            android:contentDescription="@string/drawable_lmax_field_description"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/drawable_lmin_field"
+            app:layout_constraintTop_toBottomOf="@+id/drawable_leq_field"
+            app:srcCompat="@drawable/rectangle_border" />
+
+        <TextView
+            android:id="@+id/textView_lmax_field_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="0.0"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="34sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/drawable_lmax_field"
+            app:layout_constraintEnd_toEndOf="@+id/drawable_lmax_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/drawable_lmax_field"
+            app:layout_constraintTop_toBottomOf="@+id/textView_lmax_field" />
+
+        <TextView
+            android:id="@+id/textView_lmax_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/drawable_lmax_field_description"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView_lmax_field_value"
+            app:layout_constraintEnd_toEndOf="@+id/drawable_lmax_field"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/drawable_lmax_field"
+            app:layout_constraintTop_toTopOf="@+id/drawable_lmax_field" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
