--- a/app/src/main/res/menu/app_bar_menu.xml
+++ b/app/src/main/res/menu/app_bar_menu.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/app_bar_menu_screenshots" />
-    <item android:title="@string/app_bar_menu_settings" />
-    <item android:title="@string/app_bar_menu_help" />
+    <item
+        android:id="@+id/action_access_screenshots"
+        android:title="@string/app_bar_menu_screenshots" />
+    <item
+        android:id="@+id/action_access_settings_activity"
+        android:title="@string/app_bar_menu_settings" />
+    <item
+        android:id="@+id/action_access_help_activity"
+        android:title="@string/app_bar_menu_help" />
 </menu>
