--- a/app/src/main/res/layout/activity_splmeter.xml
+++ b/app/src/main/res/layout/activity_splmeter.xml
@@ -46,7 +46,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:text="0.0"
+            android:text="@string/textview_linst_field_placeholder_value"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="34sp"
@@ -100,7 +100,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:text="0.0"
+            android:text="@string/textview_linst_field_placeholder_value"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="34sp"
@@ -154,7 +154,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:text="0.0"
+            android:text="@string/textview_linst_field_placeholder_value"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="34sp"
@@ -208,7 +208,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:text="0.0"
+            android:text="@string/textview_linst_field_placeholder_value"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="34sp"
